--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <head>
   <title>ChessMove</title>
-  <!-- TODO Add logo -->
-  <!-- <link rel="icon" href="logo.png" type="image/x-icon"> -->
+  <link rel="icon" href="chess_move.png" type="image/x-icon">
   <!-- Our Styles -->
   <link rel="stylesheet" href="css/main.css">
   <insert-html link="https://swag31415.github.io/Portfolio/inserts/head.html"></insert-html>
@@ -12,11 +11,35 @@
 <body>
   <insert-html link="https://swag31415.github.io/Portfolio/inserts/menu.html"></insert-html>
   <main class="container">
-    <!-- TODO Add body -->
+    <h1>Chess Move</h1>
+    <p>Move the sliders and see how around 2000 games of chess played out</p>
+    <div class="row">
+      <div class="col s12 m6">
+        <h5>Games where White won</h5>
+        <div class="card">
+          <div id="white-board" class="card-image"></div>
+        </div>
+        <p class="range-field">
+          <input type="range" id="white-turn" min="1" value="1"/>
+        </p>
+      </div>
+      <div class="col s12 m6">
+        <h5>Games where Black won</h5>
+        <div class="card">
+          <div id="black-board" class="card-image"></div>
+        </div>
+        <p class="range-field">
+          <input type="range" id="black-turn" min="1" value="1"/>
+        </p>
+      </div>
+    </div>
   </main>
   <insert-html link="https://swag31415.github.io/Portfolio/inserts/foot.html"></insert-html>
   <!-- HTML Inserts -->
   <script src="https://swag31415.github.io/Portfolio/js/html_inserts.js"></script>
+  <!-- Jquery Slim -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
   <!-- Our Scripts -->
   <script src="js/main.js"></script>
 </body>
